added rows to container with employee info

--- a/templates/intern.html
+++ b/templates/intern.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <div id="interncontainer">
-
+            <row id="top"></row>
+            <row id="bottom"></row>
         </div>
     </body>
 </html>
