--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <div id="engineercontainer">
-
+            <row id="top"></row>
+            <row id="bottom"></row>
         </div>
     </body>
 </html>
