created engineer template

--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -4,9 +4,23 @@
 <link rel="stylesheet" href="assets/engineer.css">
     </head>
     <body>
-        <div id="engineercontainer">
-            <row id="top"></row>
-            <row id="bottom"></row>
-        </div>
+       <!-- <div id="engineercontainer"> -->
+           <div class="row">
+               <div class="col-md-3">
+            <div class="row" id="top">
+                <br>
+                <p id="name">John Doe</p>
+                <p id="role">Engineer</p>
+                <br>
+            </div>
+           <div class="row" id="bottom">
+               <table id="infotable">
+                   <tr><td>ID: 123</td></tr>
+                   <tr><td>Email: user@web.com</td></tr>
+                   <tr><td>GitHub: UserName</td></tr>
+               </table>
+           </div>
+           </div>
+       <!--</div>-->
     </body>
 </html>
