developed individual HTML/CSS templates

--- a/templates/intern.html
+++ b/templates/intern.html
@@ -4,9 +4,21 @@
 <link rel="stylesheet" href="assets/intern.css">
     </head>
     <body>
-        <div id="interncontainer">
-            <row id="top"></row>
-            <row id="bottom"></row>
-        </div>
+           <div class="row">
+               <div class="col-md-3">
+            <div class="row" id="top">
+                <br>
+                <p id="name">John Doe</p>
+                <p id="role">Intern</p>
+                <br>
+            </div>
+           <div class="row" id="bottom">
+               <table id="infotable">
+                   <tr><td>ID: 123</td></tr>
+                   <tr><td>Email: user@web.com</td></tr>
+                   <tr><td>Current school: George Washington University</td></tr>
+               </table>
+           </div>
+           </div>
     </body>
 </html>
