--- a/templates/main.html
+++ b/templates/main.html
@@ -4,9 +4,56 @@
 <link rel="stylesheet" href="assets/main.css">
     </head>
     <body>
-        <div id="maincontainer">
-            <row id="top"></row>
-            <row id="bottom"></row>
-        </div>
+           <div class="row">
+
+            <div class="col-md-3">
+                <div class="row" id="top_1">
+                    <br>
+                    <p class="name">Jane Doe</p>
+                    <p class="role">Engineer</p>
+                    <br>
+                </div>
+               <div class="row" id="bottom_1">
+                   <table class="infotable">
+                       <tr><td>ID: 123</td></tr>
+                       <tr><td>Email: user@web.com</td></tr>
+                       <tr><td>GitHub: JaneDoe</td></tr>
+                   </table>
+               </div>
+            </div>
+
+            <div class="col-md-3">
+            <div class="row" id="top_2">
+                <br>
+                <p class="name">John Doe</p>
+                <p class="role">Intern</p>
+                <br>
+            </div>
+           <div class="row" id="bottom_2">
+               <table class="infotable">
+                   <tr><td>ID: 123</td></tr>
+                   <tr><td>Email: user@web.com</td></tr>
+                   <tr><td>Current school: George Washington University</td></tr>
+               </table>
+           </div>
+           </div>
+
+           <div class="col-md-3">
+            <div class="row" id="top_3">
+                <br>
+                <p class="name">Joseph Doe</p>
+                <p class="role">Manager</p>
+                <br>
+            </div>
+           <div class="row" id="bottom_3">
+               <table class="infotable">
+                   <tr><td>ID: 123</td></tr>
+                   <tr><td>Email: user@web.com</td></tr>
+                   <tr><td>Office number: 456</td></tr>
+               </table>
+           </div>
+           </div>
+
+           </div>
     </body>
 </html>
