--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,12 +1,24 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/manager.css">
+<link rel="stylesheet" href="assets/manager.css">
     </head>
     <body>
-        <div id="managercontainer">
-            <row id="top"></row>
-            <row id="bottom"></row>
-        </div>
+           <div class="row">
+               <div class="col-md-3">
+            <div class="row" id="top">
+                <br>
+                <p id="name">John Doe</p>
+                <p id="role">Intern</p>
+                <br>
+            </div>
+           <div class="row" id="bottom">
+               <table id="infotable">
+                   <tr><td>ID: 123</td></tr>
+                   <tr><td>Email: user@web.com</td></tr>
+                   <tr><td>Office number: 456</td></tr>
+               </table>
+           </div>
+           </div>
     </body>
 </html>
