made the IDs and email addresses unique

--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
                <div class="row" id="bottom_1">
                    <table class="infotable">
                        <tr><td>ID: 123</td></tr>
-                       <tr><td>Email: user@web.com</td></tr>
+                       <tr><td>Email: janedoe@web.com</td></tr>
                        <tr><td>GitHub: JaneDoe</td></tr>
                    </table>
                </div>
@@ -31,8 +31,8 @@
             </div>
            <div class="row" id="bottom_2">
                <table class="infotable">
-                   <tr><td>ID: 123</td></tr>
-                   <tr><td>Email: user@web.com</td></tr>
+                   <tr><td>ID: 124</td></tr>
+                   <tr><td>Email: johndoe@web.com</td></tr>
                    <tr><td>Current school: George Washington University</td></tr>
                </table>
            </div>
@@ -47,8 +47,8 @@
             </div>
            <div class="row" id="bottom_3">
                <table class="infotable">
-                   <tr><td>ID: 123</td></tr>
-                   <tr><td>Email: user@web.com</td></tr>
+                   <tr><td>ID: 125</td></tr>
+                   <tr><td>Email: josephdoe@web.com</td></tr>
                    <tr><td>Office number: 456</td></tr>
                </table>
            </div>
