--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,22 @@
 <link rel="stylesheet" href="assets/main.css">
     </head>
     <body>
-           <div class="row">
+
+        <div class="header">
+            My Team
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+               <a href="manager.html">Manager: </a>
+            </div>
+            <div class="col-md-3">
+                <a href="engineer.html">Engineers: </a>
+            </div>
+            <div class="col-md-3">
+                <a href="intern.html">Interns: </a>
+            </div>
+        </div>
+         <!--  <div class="row">
 
             <div class="col-md-3">
                 <div class="row" id="top_1">
@@ -54,6 +69,6 @@
            </div>
            </div>
 
-           </div>
+           </div> -->
     </body>
 </html>
