--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,65 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="assets/manager.css">
+    </head>
+    <body>
+           <div class="row">
+               <div class="col-md-3">
+            <div class="row" id="top">
+                <br>
+                <p id="name">John Doe</p>
+                <p id="role">Manager</p>
+                <br>
+            </div>
+           <div class="row" id="bottom">
+               <table id="infotable">
+                   <tr><td>ID: 123</td></tr>
+                   <tr><td>Office number: 456</td></tr>
+               </table>
+           </div>
+           </div>
+           </div>
+
+           <div class="row">
+            <div class="col-md-3">
+         <div class="row" id="top">
+             <br>
+             <p id="name">John Doe</p>
+             <p id="role">Engineer</p>
+             <br>
+         </div>
+        <div class="row" id="bottom">
+            <table id="infotable">
+                <tr><td>ID: 123</td></tr>
+                <tr><td>GitHub account: <a href="https://www.github.com/JohnDoeGitsIt">JohnDoeGitsIt</a></td></tr>
+            </table>
+        </div>
+        </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3">
+         <div class="row" id="top">
+             <br>
+             <p id="name">John Doe</p>
+             <p id="role">Intern</p>
+             <br>
+         </div>
+        <div class="row" id="bottom">
+            <table id="infotable">
+                <tr><td>ID: 123</td></tr>
+                <tr><td>Current School: George Washington University</td></tr>
+            </table>
+        </div>
+        </div>
+        </div>
+    </body>
+</html>
+<!--
+<html>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="assets/main.css">
     </head>
     <body>
@@ -19,7 +78,7 @@
                 <a href="intern.html">Interns: </a>
             </div>
         </div>
-         <!--  <div class="row">
+          <div class="row">
 
             <div class="col-md-3">
                 <div class="row" id="top_1">
@@ -69,6 +128,6 @@
            </div>
            </div>
 
-           </div> -->
+           </div> 
     </body>
-</html>
+</html> -->
